--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asma-app-lib-helpers",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
   "main": "lib/index.js",
   "types": "lib",
@@ -16,5 +16,8 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "antd": "^4.14.0"
   }
 }
