--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "asma-app-lib-helpers",
-    "version": "1.2.33",
+    "version": "1.2.34",
     "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
     "main": "lib/index.js",
     "types": "lib",
@@ -15,9 +15,11 @@
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "@types/react": "^17.0.3",
         "typescript": "^4.2.3"
     },
     "dependencies": {
-        "antd": "^4.14.1"
+        "antd": "^4.14.1",
+        "react": "^17.0.2"
     }
 }
