--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "antd": "^4.14.1",
+        "idb-keyval": "^5.0.5",
+        "mobx-state-tree": "^5.0.1",
         "react": "^17.0.2"
     }
 }
