--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "antd": "^4.14.1",
         "idb-keyval": "^5.0.5",
+        "mobx": "^6.3.2",
         "mobx-state-tree": "^5.0.1",
         "react": "^17.0.2"
     }
