--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "@types/promise.allsettled": "^1.0.3",
         "@types/react": "^17.0.3",
         "typescript": "^4.2.3"
     },
