--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "asma-app-lib-helpers",
-    "version": "1.4.9",
+    "version": "1.4.10",
     "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
     "main": "lib/index.js",
     "types": "lib",
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "antd": "^4.14.1",
+        "asma-genql-directory": "^1.0.9",
         "idb-keyval": "^5.0.5",
         "mobx": "^6.3.2",
         "mobx-state-tree": "^5.0.1",
