--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "lib/index.js",
     "types": "lib",
     "scripts": {
-        "build": "tsc -p ."
+        "build": "tsc && tsc -p ."
     },
     "repository": {
         "type": "git",
