--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     },
     "dependencies": {
         "antd": "^4.14.1",
-        "asma-genql-directory": "^1.0.25",
+        "asma-genql-directory": "^1.0.29",
+        "axios": "^0.24.0",
         "idb-keyval": "^5.0.5",
         "mobx": "^6.3.2",
         "mobx-state-tree": "^5.0.1",
