--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "asma-app-lib-helpers",
-    "version": "1.5.26",
+    "version": "1.5.28",
     "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
     "main": "lib/index.js",
     "types": "lib",
@@ -19,6 +19,7 @@
         "typescript": "^4.4.4"
     },
     "dependencies": {
+        "antd": "^4.19.5",
         "asma-genql-directory": "^1.0.29",
         "axios": "^0.24.0",
         "idb-keyval": "^5.0.5",
