--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "asma-app-lib-helpers",
-    "version": "1.5.30",
+    "name": "asma-app-lib-helpers_ueh",
+    "version": "1.5.31",
     "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
     "main": "lib/index.js",
     "types": "lib",
