--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-    "name": "asma-app-lib-helpers_ueh",
-    "version": "1.5.31",
-    "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
-    "main": "lib/index.js",
-    "types": "lib",
-    "scripts": {
-        "build": "tsc && tsc -p ."
-    },
-    "repository": {
-        "type": "git",
-        "url": ""
-    },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/react": "^17.0.3",
-        "typescript": "^4.4.4"
-    },
-    "dependencies": {
-        "antd": "^4.19.5",
-        "asma-genql-directory": "^1.0.29",
-        "axios": "^0.24.0",
-        "idb-keyval": "^5.0.5",
-        "mobx": "^6.3.2",
-        "mobx-state-tree": "^5.0.1",
-        "react": "^17.0.2"
-    }
+  "name": "asma-app-lib-helpers",
+  "version": "1.5.32",
+  "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
+  "main": "lib/index.js",
+  "types": "lib",
+  "scripts": {
+    "build": "tsc && tsc -p ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://avanssoma@dev.azure.com/avanssoma/Arbeidoginkludering/_git/asma-app-lib-helpers"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/react": "^17.0.3",
+    "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "antd": "^4.19.5",
+    "asma-genql-directory": "^1.0.29",
+    "axios": "^0.24.0",
+    "idb-keyval": "^5.0.5",
+    "mobx": "^6.3.2",
+    "mobx-state-tree": "^5.0.1",
+    "react": "^17.0.2"
+  }
 }
