--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "asma-app-lib-helpers",
-    "version": "1.5.27",
+    "version": "1.6.0",
     "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
     "main": "lib/index.js",
     "types": "lib",
+    "type": "module",
     "scripts": {
         "build": "tsc && tsc -p ."
     },
