--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "antd": "^4.20.5",
         "asma-genql-directory": "^1.0.52",
         "axios": "^0.27.2",
+        "history": "^5.3.0",
         "idb-keyval": "^6.1.0",
         "mobx": "^6.6.0",
         "mobx-state-tree": "^5.1.5",
