--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,39 @@
 {
-    "typescript.tsdk": "node_modules/typescript/lib"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
+    "editor.wordWrap": "on",
+    // let editor format using prettier for all other files
+    "editor.formatOnSave": true,
+    // disable editor formatting, so eslint can handle it
+    "[javascript]": {
+        "editor.formatOnSave": false,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[javascriptreact]": {
+        "editor.formatOnSave": false
+    },
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 1500,
+    "eslint.alwaysShowStatus": true,
+    //"typescript.tsdk": "./node_modules/typescript/lib",
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "eslint.validate": ["javascript", "javascriptreact", "html", "typescriptreact"],
+    "typescript.referencesCodeLens.enabled": true,
+    "javascript.referencesCodeLens.enabled": true,
+    "editor.quickSuggestions": {
+        "strings": true
+    },
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "css.validate": false,
+    "stylelint.enable": true, // Enable sytlelint
+    "scss.validate": false, // Disable scss lint (optional if using scss)
+    "explorer.decorations.badges": true,
+    "explorer.decorations.colors": true
 }
