--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "lib",
     "type": "module",
     "scripts": {
-        "build": "tsc && tsc -p ."
+        "build": "npx tsc && npx tsc -p ."
     },
     "repository": {
         "type": "git",
