--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "asma-app-lib-helpers",
-    "version": "1.7.17",
+    "name": "asma-event-bus",
+    "version": "0.0.0",
     "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
     "main": "lib/index.js",
     "types": "lib",
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://avanssoma@dev.azure.com/avanssoma/Arbeidoginkludering/_git/asma-app-lib-helpers"
+        "url": "https://avanssoma@dev.azure.com/avanssoma/Arbeidoginkludering/_git/asma-event-bus"
     },
     "keywords": [],
     "author": "",
