--- a/package.json
+++ b/package.json
@@ -19,15 +19,5 @@
         "@types/react": "^17.0.48",
         "typescript": "^4.7.4"
     },
-    "dependencies": {
-        "@genql/runtime": "^2.10.0",
-        "antd": "^4.22.3",
-        "asma-genql-directory": "^1.0.59",
-        "axios": "^0.27.2",
-        "history": "^5.3.0",
-        "idb-keyval": "^6.2.0",
-        "mobx": "^6.6.1",
-        "mobx-state-tree": "^5.1.5",
-        "react": "^17.0.2"
-    }
+    "dependencies": {}
 }
