--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,5 +35,6 @@
     "stylelint.enable": true, // Enable sytlelint
     "scss.validate": false, // Disable scss lint (optional if using scss)
     "explorer.decorations.badges": true,
-    "explorer.decorations.colors": true
+    "explorer.decorations.colors": true,
+    "cSpell.words": ["asma"]
 }
