delete storage on last registered event

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,7 +76,7 @@
         "noPropertyAccessFromIndexSignature": true,
         "resolveJsonModule": true,
         "experimentalDecorators": false,
-        "importsNotUsedAsValues": "error",
+        "verbatimModuleSyntax": true,
         "useUnknownInCatchVariables": false
     },
     "include": ["src", "lib/interfaces"],
