--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,5 @@
     "scss.validate": false, // Disable scss lint (optional if using scss)
     "explorer.decorations.badges": true,
     "explorer.decorations.colors": true,
-    "cSpell.words": ["asma", "deepcode", "qnrs"]
+    "cSpell.words": ["actno", "asma", "deepcode",  "qnrs", "soknad"]
 }
