--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "asma-event-bus",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
     "main": "lib/index.js",
     "types": "lib",
     "type": "module",
     "scripts": {
-        "build": "npx tsc && npx tsc -p ."
+        "build": "npx tsc && npx tsc -p .",
+        "build:pub:patch": "yarn build && yarn publish --patch"
     },
     "repository": {
         "type": "git",
